# vics-ir-generator

./: .gitignore  Dockerfile  README.md  api.py  cuki_ir_core.py  pyproject.toml  vics_ir_generator.py
static/: index.html
