[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vics-ir-generator"
version = "0.1.0"
description = "Guitar IR generator script"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "scipy>=1.15.1",
    "soundfile>=0.13.1",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
]

[project.scripts]
vics-ir-generator = "vics_ir_generator:main"
vics-ir-generator-web-dev = "api:start_dev_server"
